samples/_failures_safe/1761170503_6a24f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3f8b2410.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_3f8b2410.c:144:9: error: expected expression at end of input
  144 |         for (
      |         ^~~
./samples/SAFE/__tmp_3f8b2410.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3f8b2410.c:144:9: error: expected declaration or statement at end of input
